feat: botao que muda a cor de fundo e um botao só para testar a funcionalidade hover

--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <input class="input" type="checkbox" name="dark-mode" id="dark-mode">
+    <label for="dark-mode" class="label">
+        <div class="circle"></div>
+    </label>
     <div class="calendar-container">
         <p class="month-name" id="month-name">April</p>
         <p class="day-name" id="day-name">Friday</p>
         <p class="day-number" id="day-number">20</p>
         <p class="year" id="year">2020</p>
     </div>
+    <a href="#" class="btn"><span>Hover Test</span></a>
  <script src="index.js"></script>   
 </body>
 </html>
