feat: loading bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="loading-container">
+        <h1>Loading</h1>
+        <div class="counter">0%</div>
+        <hr class="loading-bar-back">
+        <hr class="loading-bar-front">
+    </div>
     <input class="input" type="checkbox" name="dark-mode" id="dark-mode">
     <label for="dark-mode" class="label">
         <div class="circle"></div>
